# my-otus-tests

./: .gitignore  LICENSE  Pipfile  README.md
stages/01_kubernetes/: deployment.yaml  service.yaml
stages/01_kubernetes/project/: Dockerfile
stages/02_kubernetes/project/: Dockerfile
stages/03_kubernetes/: _service.yaml  config.yaml  deployment.yaml  ingress.yaml  initdb.yaml  postgres.yaml
stages/03_kubernetes/project/: Dockerfile  requirements.txt
stages/03_kubernetes/student-app-chart/: Chart.yaml  values.yaml
stages/11_apigateway/: README.md
stages/11_apigateway/ambassador/: values.yaml
stages/77_idempotency/: README.md
stages/77_idempotency/project/app/: Cargo.toml
stages/77_idempotency/project/app/src/: app_factory.rs  main.rs
stages/77_idempotency/project/app/src/core/: errors.rs  requests.rs  responses.rs
stages/77_idempotency/project/app/src/db/: mod.rs  models.rs  schema.rs
stages/77_idempotency/project/app/src/db/ops/: create.rs  delete.rs  read.rs  update.rs
stages/77_idempotency/project/app/src/views/: health.rs  orders.rs
stages/88_prometheus/: README.md  graphana_dashboard.json
stages/88_prometheus/project/app/: Cargo.toml
stages/88_prometheus/project/app/src/: app_factory.rs  main.rs
stages/88_prometheus/project/app/src/core/: requests.rs  responses.rs
stages/88_prometheus/project/app/src/db/: models.rs  schema.rs
stages/88_prometheus/project/app/src/db/ops/: create.rs  delete.rs  read.rs  update.rs
stages/88_prometheus/project/app/src/prometheus/: metrics.rs
stages/88_prometheus/project/app/src/views/: health.rs  users.rs
stages/99_stream_processing/: Readme.md  docker-compose.yaml
stages/99_stream_processing/notify_project/app/: Cargo.toml
stages/99_stream_processing/notify_project/app/src/: app_factory.rs  app_types.rs  main.rs
stages/99_stream_processing/notify_project/app/src/core/: errors.rs  requests.rs  responses.rs
stages/99_stream_processing/notify_project/app/src/db/: mod.rs  models.rs  schema.rs
stages/99_stream_processing/notify_project/app/src/db/ops/: create.rs  read.rs
stages/99_stream_processing/notify_project/app/src/kfk/: job.rs  mod.rs  request.rs  response.rs
stages/99_stream_processing/notify_project/app/src/views/: mod.rs  notifications.rs
(+113 files in other folders)
