[package]
name = "users-app"
version = "1.0.0"
authors = ["d.grigoriev <dmitry-gr87@yandex.ru>"]
edition = "2018"


[[bin]]
name = "myapp"
path = "src/main.rs"


[dependencies]
log = "0.4.14"
log4rs = "1.0.0"
maplit = "1.0.2"
dotenv = "0.15.0"
lazy_static = "1.4.0"
prometheus = "0.12.0"
r2d2 = "0.8.9"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"]}
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-service = "^1.0"
actix-cors = "0.5.4"
serde = "^1.0"
openssl = "*"
futures = "*"


[profile.dev]
codegen-units = 32
incremental = true
opt-level = 0


[profile.release]
codegen-units = 1
opt-level = 3
